<resources>
    <!-- General App Strings   -->
    <string name="app_name">RateDaDeece</string>

    <!-- Rating Dish Screen -->
    <string name="rate_dish_info">Blagh - Home - 1.3 stars out of 100 reviews</string>
    <string name="rate_dish_prompt_stars">What would you like to rate the dish?</string>
    <string name="rate_dish_prompt_comment">Would you like to leave an optional comment?</string>
    <string name="rate_dish_prompt_comment_button">Comment</string>
    <string name="rate_dish_submit_button">Submit review!</string>
    <string name="dish_information_format">%s - %s: %s</string>

    <!-- Main Screen -->
    <string name="menu_button">Menu</string>
    <string name="review_button">Review</string>
    <string name="forum_button">Forum</string>

    <!-- Error Messages   -->
    <string name="missing_item_fields_error">Please select a dish star rating!</string>
    <string name="tbd">to be designed...</string>
    <string name="deece_missing_item_fields_error">Please select a Deece star rating!</string>

    <!--  Dish Info Screen/Fragment -->
    <string name="info_button">Info</string>
    <string name="review_header">Other User\'s Comments!</string>
    <string name="no_comments_found">No comments yet.</string>

    <!--  View Analytic Screen -->
    <string name="deece_comments">Deece Comments</string>

    <!--  Deece Info Screen/Fragment -->
    <string name="rate_deece_format">Gordon Commons (Deece)</string>
    <string name="rate_deece_prompt_comment">Would you like to leave a comment? (Optional)</string>
    <string name="rate_deece_prompt_stars">How was the Deece today?</string>
    <string name="rate_deece_submit_button">Submit review!</string>

    <!--  Forum Screen  -->
    <string name="create_post_button">Post</string>

    <!--  Forum Post Screen  -->
    <string name="subject_prompt">Please select a subject below:</string>
    <string name="post_above_prompt">Please leave a post below:</string>
    <string name="post_prompt">Leave post here</string>
    <string name="post_prompt_button">Post</string>
    <string name="title_prompt">Please enter a title below:</string>
    <string name="title_textbox">Title</string>


</resources>